2008-12-22  Bruno coudoin  <bruno.coudoin@free.fr>

	Integrated original svg images in the babymatch activity.

	* src/babymatch-activity/resources/babymatch/Makefile.am:
	* src/babymatch-activity/resources/babymatch/apple.svg:
	* src/babymatch-activity/resources/babymatch/bell.svg:
	* src/babymatch-activity/resources/babymatch/bicycle.svg:
	* src/babymatch-activity/resources/babymatch/board1_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board2_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board3_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board4_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board5_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board6_0.xml.in:
	* src/babymatch-activity/resources/babymatch/board7_0.xml.in:
	* src/babymatch-activity/resources/babymatch/bottle.svg:
	* src/babymatch-activity/resources/babymatch/car.svg:
	* src/babymatch-activity/resources/babymatch/carrot.svg:
	* src/babymatch-activity/resources/babymatch/castle.svg:
	* src/babymatch-activity/resources/babymatch/crown.svg:
	* src/babymatch-activity/resources/babymatch/egg.svg:
	* src/babymatch-activity/resources/babymatch/eggpot.svg:
	* src/babymatch-activity/resources/babymatch/fishingboat.svg:
	* src/babymatch-activity/resources/babymatch/flower.svg:
	* src/babymatch-activity/resources/babymatch/flowerpot.svg:
	* src/babymatch-activity/resources/babymatch/football.svg:
	* src/babymatch-activity/resources/babymatch/fusee.svg:
	* src/babymatch-activity/resources/babymatch/glass.svg:
	* src/babymatch-activity/resources/babymatch/house.svg:
	* src/babymatch-activity/resources/babymatch/lamp.svg:
	* src/babymatch-activity/resources/babymatch/lifebuoy.svg:
	* src/babymatch-activity/resources/babymatch/light.svg:
	* src/babymatch-activity/resources/babymatch/lighthouse.svg:
	* src/babymatch-activity/resources/babymatch/minivan.svg:
	* src/babymatch-activity/resources/babymatch/pencil.svg: