@@ -145,11 +145,11 @@ static void start_board (GcomprisBoard *agcomprisBoard)
       gcomprisBoard=agcomprisBoard;
 
       gc_set_background(goo_canvas_get_root_item(gcomprisBoard->canvas),
-			      "clockgame/clockgame-bg.jpg");
+			      "clockgame/clockgame-bg.svgz");
 
       /* set initial values for this level adjusted to
 	 fit the watch background */
-      cx =  BOARDWIDTH/2;
+      cx =  BOARDWIDTH/2 + 16;
       cy =  BOARDHEIGHT*0.4 + 42;
       clock_size = BOARDHEIGHT*0.3;
 
@@ -158,10 +158,11 @@ static void start_board (GcomprisBoard *agcomprisBoard)
       gcomprisBoard->sublevel=1;
       gcomprisBoard->number_of_sublevel=3; /* Go to next level after this number of 'play' */
       gc_score_start(SCORESTYLE_NOTE,
-			   BOARDWIDTH - 195,
-			   BOARDHEIGHT - 30,
+		     BOARDWIDTH - 195,
+		     30,
 			   gcomprisBoard->number_of_sublevel);
       gc_bar_set(GC_BAR_LEVEL);
+      gc_bar_location(BOARDWIDTH - 200, -1, 0.8);
 
       clockgame_next_level();
 
