@@ -1,5 +1,5 @@
 imgdir = $(pkgdatadir)/@PACKAGE_DATA_DIR@/clockgame
 img_DATA = \
-	clockgame-bg.jpg
+	clockgame-bg.svgz
 
 EXTRA_DIST = $(img_DATA)
