@@ -1,5 +1,12 @@
 2008-12-22  Bruno coudoin  <bruno.coudoin@free.fr>
 
+	Integrated original svg images in the clockgame activity.
+
+	* src/clockgame-activity/clockgame.c: (start_board):
+	* src/clockgame-activity/resources/clockgame/Makefile.am:
+
+2008-12-22  Bruno coudoin  <bruno.coudoin@free.fr>
+
 	Integrated original svg images in the babymatch activity.
 
 	* src/babymatch-activity/resources/babymatch/Makefile.am:
